# Shop

./: .flake8  .gitignore  README.md  pyproject.toml
.github/workflows/: django.yml
requirements/: dev.txt  prod.txt  test.txt
store/: manage.py
store/apps/catalog/: apps.py  urls.py  views.py
store/apps/core/: forms.py  lazy_loaders.py  validators.py  views.py  widgets.py
store/apps/users/: backends.py  forms.py  models.py  urls.py  views.py
store/apps/users/migrations/: 0001_initial.py  0002_usermodel_avatar_usermodel_birth_date_usermodel_city_and_more.py
store/static_dev/css/: main.scss
store/static_dev/favicon/: site.webmanifest
store/static_dev/js/: main.js  users.js
store/static_dev/js/modules/: carousel.js  config.js  forms.js  select.js  show-grid.js  tooltip.js
store/static_dev/js/pages/: profile.js
store/static_dev/js/widgets/: checkbox_input.js  file_input.js  init.js  password_input.js  select_input.js  text_input.js
store/static_dev/scss/: _variables.scss  main.scss  users.scss
store/static_dev/scss/modules/: _card.scss  _error.scss  _fonts.scss  _footer.scss  _forms.scss  _header.scss  _select.scss  _show-grid.scss  _styles.scss  _tooltip.scss
store/static_dev/scss/pages/: profile.scss
store/static_dev/scss/widgets/: _checkbox_input.scss  _file_input.scss  _select_input.scss  _text_input.scss  _textarea_input.scss
store/store/: settings.py  urls.py
store/templates/: base.html
store/templates/include/: aside.html  footer.html  header.html
store/templates/modules/: show-grid.html
(+15 files in other folders)
