[project]
name = "catalog"
version = "0.1.0"
description = "Catalog project dev by @frixit"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.black]
line-length = 120
target-version = ['py312']
preview = true
enable-unstable-feature = ["string_processing"]

[tool.isort]
profile = "black"
line_length = 120
known_third_party = ["django"]
known_first_party = ["apps.about", "apps.catalog", "apps.core", "apps.homepage", "shop", "apps.users"]
default_section = "THIRDPARTY"
force_sort_within_sections = true
combine_as_imports = true